tests/fixtures/invalid/pow_float_float_str.py
# Cannot call pow() with Float, Float, Str
x = pow(1.0, 1.0, "hello")
